add https for out link

--- a/portfolio.html
+++ b/portfolio.html
@@ -228,7 +228,7 @@
 				<div class="col-lg-6">
 					<div class="copyright">
 						<p>
-              <span>&copy; Target 2030 All right reserved. By </span><a href="http://ibychealth.com" target="_blank">IBYC AI Healthcare Inc.</a>
+              <span>&copy; Target 2030 All right reserved. By </span><a href="https://ibychealth.com" target="_blank">IBYC AI Healthcare Inc.</a>
             </p>
 					</div>
 				</div>
