--- a/about.html
+++ b/about.html
@@ -12,11 +12,6 @@
 <link href="css/flexslider.css" rel="stylesheet" />
 <link href="css/style.css" rel="stylesheet" />
 
-<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-<!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
 </head>
 <body>
 <div id="wrapper">
@@ -258,7 +253,7 @@
 				<div class="col-lg-6">
 					<div class="copyright">
 						<p>
-              <span>&copy; Target 2030 All right reserved. By </span><a href="http://ibychealth.com" target="_blank">IBYC AI Healthcare Inc.</a>
+              <span>&copy; Target 2030 All right reserved. By </span><a href="https://ibychealth.com" target="_blank">IBYC AI Healthcare Inc.</a>
             </p>
 					</div>
 				</div>
