--- a/privacy.html
+++ b/privacy.html
@@ -11,12 +11,6 @@
 <link href="css/jcarousel.css" rel="stylesheet" />
 <link href="css/flexslider.css" rel="stylesheet" />
 <link href="css/style.css" rel="stylesheet" />
-
-<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-<!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
 </head>
 <body>
 <div id="wrapper">
@@ -90,7 +84,7 @@
 
         <div class="content" id="privacy" style="display:none;">
           <h2>Privacy Policy</h2>
-          <p><strong>Last updated:</strong> [Date]</p>
+          <p><strong>Last updated:</strong> Aug. 1st, 2025</p>
           <p>Thank you for using [App Name] (“we,” “our,” or “us”). This Privacy Policy explains how we collect, use, disclose, and protect your personal information when you use our medical-grade smartwatch app and related services (“Services”).</p>
           <h3>1. Information We Collect</h3>
           <ul>
@@ -198,7 +192,7 @@
 				<div class="col-lg-6">
 					<div class="copyright">
 						<p>
-              <span>&copy; Target 2030 All right reserved. By </span><a href="http://ibychealth.com" target="_blank">IBYC AI Healthcare Inc.</a>
+              <span>&copy; Target 2030 All right reserved. By </span><a href="https://ibychealth.com" target="_blank">IBYC AI Healthcare Inc.</a>
             </p>
 					</div>
 				</div>
