--- a/product.html
+++ b/product.html
@@ -308,7 +308,7 @@
 					<div class="col-lg-6">
 						<div class="copyright">
 							<p>
-								<span>© Target 2030 All right reserved. By </span><a href="http://ibychealth.com" target="_blank">IBYC AI Healthcare Inc.</a>
+								<span>© Target 2030 All right reserved. By </span><a href="https://ibychealth.com" target="_blank">IBYC AI Healthcare Inc.</a>
 							</p>
 						</div>
 					</div>
